学习vue测试代码

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,24 @@
+server.port = 8080
+server.context-path=/demo
 
+# ============================== MySQL配置 =============================================================================
+spring.datasource.url = jdbc:mysql://127.0.0.1:3306/vuedatabase?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
+spring.datasource.username = root
+spring.datasource.password = 111111
+spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
+
+# =================================== JPA ===============================================================================
+# Specify the DBMS
+spring.jpa.database = MYSQL
+# Show or not log for each sql query 是否打印 sql 语句
+spring.jpa.show-sql = true
+# Hibernate ddl auto (create, create-drop, update) 慎用 create ，因为create每次启动都会删除之前的表，再重新创建，数据会丢失
+spring.jpa.hibernate.ddl-auto = update
+# Naming strategy
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.DefaultNamingStrategy
+# stripped before adding them to the entity manager 修改方言
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+————————————————
+版权声明：本文为CSDN博主「weixin_42863267」的原创文章，遵循CC 4.0 BY-SA版权协议，转载请附上原文出处链接及本声明。
+原文链接：https://blog.csdn.net/weixin_42863267/article/details/89536628
