--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port = 8080
 server.context-path=/demo
 
 # ============================== MySQL≈‰÷√ =============================================================================
-spring.datasource.url = jdbc:mysql://192.168.3.45:3306/vuedatabase?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
+spring.datasource.url = jdbc:mysql://extenal-test/vuedatabase?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
 spring.datasource.username = root
 spring.datasource.password = 123456Aa?
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
